--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&family=Sorts+Mill+Goudy:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&family=Merienda:wght@300..900&display=swap');
 
 
 @import 'tailwindcss';
@@ -31,8 +31,9 @@ html {
 }
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    --font-display: "Sorts Mill Goudy", serif;
+    --font-sans: "Nata Sans", sans-serif;
+    --font-serif: "Merienda", cursive;
+    --font-display: "Merienda", cursive;
     --font-body: "Nata Sans", sans-serif;
 
     --color-zinc-50: #fafafa;
